--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       <nav class="primary">
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About Me</a></li>
+          <li><a href="#about">About Me</a></li>
           <li><a href="blog/blog-homepage.html">Blog</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#contactme">Contact</a></li>
-          <li><a href="#resources">Useful Resources</a></li>
         </ul>
       </nav>
 
@@ -58,7 +58,7 @@
 
       <div class="row">
         <div class="twelve columns">
-          <h2 class="section-heading">About me</h2>
+          <h2 class="section-heading"><a name="about">About me</a></h2>
         </div>  
       </div><!-- end of row -->
       <div class="row">
@@ -93,7 +93,47 @@
       </div><!-- end of row -->
 
       <div class="row">
+        <div class="three columns offset-by-one">
+          <a href="blog/t4-javascript-basics.html"><img class="blog-image" src="images/watercave.jpg" alt="Cave on beach"></a>
+        </div>
 
+        <div class="seven columns">
+          <h5 class="blog-heading-text">The Basics of Javascript</h5>
+          <p id="dateline"><em>10th April 2016</em></p>
+          <p class="blog-heading-text">
+            This week our focus shifted from studying HTML and CSS to Javascript. While at this stage we're getting our heads around the syntax and usage of the language, I'm looking forward to implmenting some Javascript around this site...<a href="blog/t4-javascript-basics.html">(click to read more)</a>
+          </p>        
+        </div><!-- end of seven columns -->
+
+        <div class="one column">
+        </div><!-- end of one column -->
+      </div><!-- end of row -->
+
+      <div class="row" id="space-between-blog-posts"><!-- spacer row -->
+      </div><!-- end of spacer row -->
+
+      <div class="row">
+        <div class="three columns offset-by-one">
+          <a href="blog/c4-daily-mindfulness.html"><img class="blog-image" src="images/mountain_range.jpg" alt="Mountain range"></a>
+        </div>
+
+        <div class="seven columns">
+          <h5 class="blog-heading-text">Daily Mindfulness</h5>
+          <p id="dateline"><em>8th April 2016</em></p>
+          <p class="blog-heading-text">
+            Having read Chapter 3 of Seach Inside Yourself, my partner and I had a four minute conversation in which we practised mindful listening, dipping, and looping...<a href="blog/c4-daily-mindfulness.html">(click to read more)</a>
+          </p>        
+        </div><!-- end of seven columns -->
+
+        <div class="one column">
+        </div><!-- end of one column -->
+      </div><!-- end of row -->
+
+      <div class="row" id="space-between-blog-posts"><!-- spacer row -->
+      </div><!-- end of spacer row -->
+
+
+      <div class="row">
         <div class="three columns offset-by-one">
           <a href="blog/c3-meditation-process.html"><img class="blog-image" src="images/kitesurf.jpg" alt="kites"></a>
         </div>
@@ -101,7 +141,7 @@
         <div class="seven columns">
           <h5 class="blog-heading-text">Meditation and Process</h5>
           <p id="dateline"><em>4th April 2016</em></p>
-          <p>
+          <p class="blog-heading-text">
             I'm not going to lie, sticking to the "process over product" approach this week was tough for me...<a href="blog/c3-meditation-process.html">(click to read more)</a>
           </p>        
         </div><!-- end of seven columns -->
@@ -153,21 +193,17 @@
     </div><!-- end of container -->
   </section><!-- end of blog posts section -->
 
-
-
-
   <section><!-- projects section -->
     <div class="container">
-      <div class="row border" id="space-between-sections">
+      <div class="row" id="space-between-sections">
       </div>
       <div class="row">
         <div class="twelve columns">
-          <h2 class="center">Projects</h2>
+          <h2 class="center"><a name="projects">Projects</a></h2>
         </div>
       </div><!-- end of row -->
     </div><!-- end of container -->
   </section><!-- end of projects section -->
-
 
   <section><!-- contact me section -->
     <div class="container">
@@ -179,7 +215,7 @@
         </div>
       </div><!-- end of row -->
       <div class="row">
-        <div class="twelve columns box">
+        <div class="twelve columns">
         </div>
       </div><!-- end of row -->
     </div><!-- end of container -->
