fixed blog links from index page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   </section><!-- end of landing page -->
 
-  <section><!-- about me section heading -->
+  <section class="grey-background"><!-- about me section heading -->
     <div class="container">
       <div class="row" id="space-between-sections">
       </div><!-- end of spacer row between sections -->
@@ -98,10 +98,10 @@
         </div>
 
         <div class="seven columns">
-          <h5 class="blog-heading-text">The Basics of Javascript</h5>
+          <a href="blog/t4-javascript-basics.html"><h5 class="blog-heading-text">The Basics of Javascript</h5>
           <p id="dateline"><em>10th April 2016</em></p>
           <p class="blog-heading-text">
-            This week our focus shifted from studying HTML and CSS to Javascript. While at this stage we're getting our heads around the syntax and usage of the language, I'm looking forward to implmenting some Javascript around this site...<a href="blog/t4-javascript-basics.html">(click to read more)</a>
+            This week our focus shifted from studying HTML and CSS to Javascript. While at this stage we're getting our heads around the syntax and usage of the language, I'm looking forward to implmenting some Javascript around this site...(click to read more)</a>
           </p>        
         </div><!-- end of seven columns -->
 
@@ -118,10 +118,10 @@
         </div>
 
         <div class="seven columns">
-          <h5 class="blog-heading-text">Daily Mindfulness</h5>
+          <a href="blog/c4-daily-mindfulness.html"><h5 class="blog-heading-text">Daily Mindfulness</h5>
           <p id="dateline"><em>8th April 2016</em></p>
           <p class="blog-heading-text">
-            Having read Chapter 3 of Seach Inside Yourself, my partner and I had a four minute conversation in which we practised mindful listening, dipping, and looping...<a href="blog/c4-daily-mindfulness.html">(click to read more)</a>
+            Having read Chapter 3 of Seach Inside Yourself, my partner and I had a four minute conversation in which we practised mindful listening, dipping, and looping...(click to read more)</a>
           </p>        
         </div><!-- end of seven columns -->
 
@@ -139,10 +139,10 @@
         </div>
 
         <div class="seven columns">
-          <h5 class="blog-heading-text">Meditation and Process</h5>
+          <a href="blog/c3-meditation-process.html"><h5 class="blog-heading-text">Meditation and Process</h5>
           <p id="dateline"><em>4th April 2016</em></p>
           <p class="blog-heading-text">
-            I'm not going to lie, sticking to the "process over product" approach this week was tough for me...<a href="blog/c3-meditation-process.html">(click to read more)</a>
+            I'm not going to lie, sticking to the "process over product" approach this week was tough for me...(click to read more)</a>
           </p>        
         </div><!-- end of seven columns -->
 
@@ -159,12 +159,12 @@
 
         </div>
         <div class="seven columns">
-          <h5 class="blog-heading-text">Design to Web</h5>
+          <a href="blog/t3-design-to-web-blog.html"><h5 class="blog-heading-text">Design to Web</h5>
           <p id="dateline">
             <em>2nd April 2016</em>
           </p>
           <p class="blog-heading-text">
-            This week we looked at the concepts of responsiveness, mobile-first development, and frameworks. Ever get the feeling you're drinking from a firehose?...<a href="blog/t3-design-to-web.html">(click to read more)</a>
+            This week we looked at the concepts of responsiveness, mobile-first development, and frameworks. Ever get the feeling you're drinking from a firehose?...(click to read more)</a>
           </p>        
         </div><!-- end of seven columns -->
         <div class="one column">
@@ -179,12 +179,12 @@
           <a href="blog/t2-html-css-dom-p2.html"><img class="blog-image" src="images/turn.jpg" alt="turn"></a>
         </div>
         <div class="seven columns">
-          <h5 class="blog-heading-text">HTML. CSS, and the DOM (part 2)</h5>
+          <a href="blog/t2-html-css-dom-p2.html"><h5 class="blog-heading-text">HTML. CSS, and the DOM (part 2)</h5>
           <p id="dateline">
             <em>23rd March 2016</em>
           </p>
           <p class="blog-heading-text">
-            This is the second part of my blog post devling into HTML, CSS, and the DOM. The focus this week was on grid based design and semantic structure...<a href="blog/t2-html-css-dom-p2">(click to read more)</a>
+            This is the second part of my blog post devling into HTML, CSS, and the DOM. The focus this week was on grid based design and semantic structure...(click to read more)</a>
           </p>
         </div>
         <div class="one column">
@@ -193,7 +193,7 @@
     </div><!-- end of container -->
   </section><!-- end of blog posts section -->
 
-  <section><!-- projects section -->
+  <section class="grey-background"><!-- projects section -->
     <div class="container">
       <div class="row" id="space-between-sections">
       </div>
