minor edits prior to Sunday deadline

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#about">About Me</a></li>
-          <li><a href="blog/blog-homepage.html">Blog</a></li>
+          <li><a href="#blog">Blog</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contactme">Contact</a></li>
         </ul>
@@ -74,7 +74,7 @@
       <div class="row">
         <div class="eight columns offset-by-two">
           <p>
-            I'm a software developer-in-training based in Auckland, attending the Enspiral Dev Academy (EDA) course from March to July 2016. Each student has a similar site that serves as an online portfolio, holding blog posts we have written, projects we have completed, and serving as a testing ground where we can implement the techniques we are learning in class. You will find that the site changes on a regular basis as I am exposed to different ways of creating an engaging website through the course cirriculum. Feel free to check back regularly and have a look at what we have learnt. 
+            I'm a software developer-in-training based in Auckland, attending the Enspiral Dev Academy (EDA) course from March to July 2016. You will find that this site changes on a regular basis as I am exposed to different ways of creating an engaging website through the course cirriculum. Feel free to check back regularly. 
           </p>
         </div><!-- end of six columns -->
       </div><!-- end of row -->
@@ -190,6 +190,16 @@
         <div class="one column">
         </div>
       </div><!-- end of row -->
+
+      <div class="row" id="space-between-blog-posts"><!-- spacer row -->
+      </div><!-- end of spacer row -->
+
+      <div class="row">
+        <div class="eight columns offset-by-two">
+          <a href="blog/blog-homepage.html"><h3 class="center">Click here to see more posts</h3></a>
+        </div>
+      </div><!-- end of row -->
+
     </div><!-- end of container -->
   </section><!-- end of blog posts section -->
 
