minor edits post HTML validation

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Home Page</title>
   <meta charset="UTF-8">
 
   <!-- Mobile Specific Metas-->
@@ -10,7 +10,10 @@
 <!-- FONT -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-  <link href='https://fonts.googleapis.com/css?family=Courgette|Yesteryear|Yellowtail' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Yesteryear' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'>
+
 
   <link href='https://fonts.googleapis.com/css?family=Arapey' rel='stylesheet' type='text/css'>
 
