further validation revisions

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
           <a href="blog/t4-javascript-basics.html"><h5 class="blog-heading-text">The Basics of Javascript</h5>
           <p id="dateline"><em>10th April 2016</em></p>
           <p class="blog-heading-text">
-            This week our focus shifted from studying HTML and CSS to Javascript. While at this stage we're getting our heads around the syntax and usage of the language, I'm looking forward to implmenting some Javascript around this site...(click to read more)</a>
-          </p>        
+            This week our focus shifted from studying HTML and CSS to Javascript. While at this stage we're getting our heads around the syntax and usage of the language, I'm looking forward to implmenting some Javascript around this site...(click to read more)
+          </p></a>        
         </div><!-- end of seven columns -->
 
         <div class="one column">
