final HTML validation changed

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <p>
         <em>Passionate</em>
       </p>
-      <p>
+      <h5>
         <strong>Full Stack Developer</strong>
-      </p>
+      </h5>
       <p>
         <em>(in training)</em>
       </p>
@@ -56,12 +56,12 @@
 
   <section class="grey-background"><!-- about me section heading -->
     <div class="container">
-      <div class="row" id="space-between-sections">
+      <div class="row space-between-sections">
       </div><!-- end of spacer row between sections -->
 
       <div class="row">
         <div class="twelve columns">
-          <h2 class="section-heading"><a name="about">About me</a></h2>
+          <h2 class="section-heading"><a id="about">About me</a></h2>
         </div>  
       </div><!-- end of row -->
       <div class="row">
@@ -86,12 +86,12 @@
 
   <section><!-- blog posts section -->
     <div class="container">
-      <div class="row" id="space-between-sections">
+      <div class="row space-between-sections">
       </div><!-- end of spacer row between sections -->
 
       <div class="row">
         <div class="twelve columns">
-          <h2 class="section-heading"><a name="blog">Latest Blog Posts</a></h2>
+          <h2 class="section-heading"><a id="blog">Latest Blog Posts</a></h2>
         </div>
       </div><!-- end of row -->
 
@@ -102,7 +102,7 @@
 
         <div class="seven columns">
           <a href="blog/t4-javascript-basics.html"><h5 class="blog-heading-text">The Basics of Javascript</h5>
-          <p id="dateline"><em>10th April 2016</em></p>
+          <p class="dateline"><em>10th April 2016</em></p>
           <p class="blog-heading-text">
             This week our focus shifted from studying HTML and CSS to Javascript. While at this stage we're getting our heads around the syntax and usage of the language, I'm looking forward to implmenting some Javascript around this site...(click to read more)
           </p></a>        
@@ -112,7 +112,7 @@
         </div><!-- end of one column -->
       </div><!-- end of row -->
 
-      <div class="row" id="space-between-blog-posts"><!-- spacer row -->
+      <div class="row space-between-blog-posts"><!-- spacer row -->
       </div><!-- end of spacer row -->
 
       <div class="row">
@@ -122,17 +122,17 @@
 
         <div class="seven columns">
           <a href="blog/c4-daily-mindfulness.html"><h5 class="blog-heading-text">Daily Mindfulness</h5>
-          <p id="dateline"><em>8th April 2016</em></p>
+          <p class="dateline"><em>8th April 2016</em></p>
           <p class="blog-heading-text">
-            Having read Chapter 3 of Seach Inside Yourself, my partner and I had a four minute conversation in which we practised mindful listening, dipping, and looping...(click to read more)</a>
-          </p>        
+            Having read Chapter 3 of Seach Inside Yourself, my partner and I had a four minute conversation in which we practised mindful listening, dipping, and looping...(click to read more)
+          </p></a>        
         </div><!-- end of seven columns -->
 
         <div class="one column">
         </div><!-- end of one column -->
       </div><!-- end of row -->
 
-      <div class="row" id="space-between-blog-posts"><!-- spacer row -->
+      <div class="row space-between-blog-posts"><!-- spacer row -->
       </div><!-- end of spacer row -->
 
 
@@ -143,17 +143,17 @@
 
         <div class="seven columns">
           <a href="blog/c3-meditation-process.html"><h5 class="blog-heading-text">Meditation and Process</h5>
-          <p id="dateline"><em>4th April 2016</em></p>
+          <p class="dateline"><em>4th April 2016</em></p>
           <p class="blog-heading-text">
-            I'm not going to lie, sticking to the "process over product" approach this week was tough for me...(click to read more)</a>
-          </p>        
+            I'm not going to lie, sticking to the "process over product" approach this week was tough for me...(click to read more)
+          </p></a>        
         </div><!-- end of seven columns -->
 
         <div class="one column">
         </div><!-- end of one column -->
       </div><!-- end of row -->
 
-      <div class="row" id="space-between-blog-posts"><!-- spacer row -->
+      <div class="row space-between-blog-posts"><!-- spacer row -->
       </div><!-- end of spacer row -->
 
       <div class="row">
@@ -163,18 +163,18 @@
         </div>
         <div class="seven columns">
           <a href="blog/t3-design-to-web-blog.html"><h5 class="blog-heading-text">Design to Web</h5>
-          <p id="dateline">
+          <p class="dateline">
             <em>2nd April 2016</em>
           </p>
           <p class="blog-heading-text">
-            This week we looked at the concepts of responsiveness, mobile-first development, and frameworks. Ever get the feeling you're drinking from a firehose?...(click to read more)</a>
-          </p>        
+            This week we looked at the concepts of responsiveness, mobile-first development, and frameworks. Ever get the feeling you're drinking from a firehose?...(click to read more)
+          </p></a>        
         </div><!-- end of seven columns -->
         <div class="one column">
         </div><!-- end of one column -->
       </div><!-- end of row -->
 
-      <div class="row" id="space-between-blog-posts"><!-- spacer row -->
+      <div class="row space-between-blog-posts"><!-- spacer row -->
       </div><!-- end of spacer row -->
 
       <div class="row">
@@ -183,18 +183,18 @@
         </div>
         <div class="seven columns">
           <a href="blog/t2-html-css-dom-p2.html"><h5 class="blog-heading-text">HTML. CSS, and the DOM (part 2)</h5>
-          <p id="dateline">
+          <p class="dateline">
             <em>23rd March 2016</em>
           </p>
           <p class="blog-heading-text">
-            This is the second part of my blog post devling into HTML, CSS, and the DOM. The focus this week was on grid based design and semantic structure...(click to read more)</a>
-          </p>
+            This is the second part of my blog post devling into HTML, CSS, and the DOM. The focus this week was on grid based design and semantic structure...(click to read more)
+          </p></a>
         </div>
         <div class="one column">
         </div>
       </div><!-- end of row -->
 
-      <div class="row" id="space-between-blog-posts"><!-- spacer row -->
+      <div class="row space-between-blog-posts"><!-- spacer row -->
       </div><!-- end of spacer row -->
 
       <div class="row">
@@ -208,11 +208,11 @@
 
   <section class="grey-background"><!-- projects section -->
     <div class="container">
-      <div class="row" id="space-between-sections">
+      <div class="row space-between-sections">
       </div>
       <div class="row">
         <div class="twelve columns">
-          <h2 class="center"><a name="projects">Projects</a></h2>
+          <h2 class="center"><a id="projects">Projects</a></h2>
         </div>
       </div><!-- end of row -->
     </div><!-- end of container -->
@@ -220,11 +220,11 @@
 
   <section><!-- contact me section -->
     <div class="container">
-      <div class="row" id="space-between-sections">
+      <div class="row space-between-sections">
       </div><!-- end of spacer row between sections -->
       <div class="row">
         <div class="twelve columns">
-          <h2 class="section-heading"><a name="contactme">Contact me</a></h2>
+          <h2 class="section-heading"><a id="contactme">Contact me</a></h2>
         </div>
       </div><!-- end of row -->
       <div class="row">
