--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="twelve columns">
           <h2 class="section-heading"><a id="about">About me</a></h2>
-        </div>  
+        </div>
       </div><!-- end of row -->
       <div class="row">
         <div class="four columns circular offset-by-four">
@@ -77,7 +77,7 @@
       <div class="row">
         <div class="eight columns offset-by-two">
           <p>
-            I'm a software developer-in-training based in Auckland, attending the Enspiral Dev Academy (EDA) course from March to July 2016. You will find that this site changes on a regular basis as I am exposed to different ways of creating an engaging website through the course cirriculum. Feel free to check back regularly. 
+            I'm a software developer-in-training based in Auckland, attending the Enspiral Dev Academy (EDA) course from March to July 2016. You will find that this site changes on a regular basis as I am exposed to different ways of creating an engaging website through the course cirriculum. Feel free to check back regularly.
           </p>
         </div><!-- end of six columns -->
       </div><!-- end of row -->
@@ -95,8 +95,47 @@
         </div>
       </div><!-- end of row -->
 
+
       <div class="row">
-        <div class="three columns offset-by-one">
+        <div class="four columns">
+          <a href="blog/c6-control.html"><img class="blog-image" src="images/boat.jpg" alt="Surfing Sri Lanka"></a>
+        </div>
+
+        <div class="seven columns">
+          <h5 class="blog-heading-text"><a href="blog/c6-control.html">Control</a></h5>
+          <p class="dateline"><em>22nd April 2016</em></p>
+          <p class="blog-heading-text">
+            Making friends with emotions, and taking a pause in times of stress when these emotions arise to critcially examine them, where they are coming from, and what you can do to manage them, was the focus of Chapter Five...<a href="blog/c6-control.html">(click to read more)</a>
+          </p>
+        </div><!-- end of seven columns -->
+
+        <div class="one column">
+        </div><!-- end of one column -->
+      </div><!-- end of row -->
+      <div class="row space-between-blog-posts"><!-- spacer row -->
+      </div><!-- end of spacer row -->
+
+      <div class="row">
+        <div class="four columns">
+          <a href="blog/t6-js-language.html"><img class="blog-image" src="images/reeds.jpg" alt="Reeds over river"></a>
+        </div>
+
+        <div class="seven columns">
+          <h5 class="blog-heading-text">Javascript Language</h5>
+          <p class="dateline"><em>21st April 2016</em></p>
+          <p class="blog-heading-text">
+            This post covers some of the common syntax that Javascript employs, including parentheses, brackets, braces, and quotes...<a href="blog/t6-js-language.html">(click to read more)</a>
+          </p>
+        </div><!-- end of seven columns -->
+
+        <div class="one column">
+        </div><!-- end of one column -->
+      </div><!-- end of row -->
+      <div class="row space-between-blog-posts"><!-- spacer row -->
+      </div><!-- end of spacer row -->
+
+      <div class="row">
+        <div class="four columns">
           <a href="blog/t4-javascript-basics.html"><img class="blog-image" src="images/watercave.jpg" alt="Cave on beach"></a>
         </div>
 
@@ -105,7 +144,7 @@
           <p class="dateline"><em>10th April 2016</em></p>
           <p class="blog-heading-text">
             This week our focus shifted from studying HTML and CSS to Javascript. While at this stage we're getting our heads around the syntax and usage of the language, I'm looking forward to implmenting some Javascript around this site...(click to read more)
-          </p></a>        
+          </p></a>
         </div><!-- end of seven columns -->
 
         <div class="one column">
@@ -116,7 +155,7 @@
       </div><!-- end of spacer row -->
 
       <div class="row">
-        <div class="three columns offset-by-one">
+        <div class="four columns">
           <a href="blog/c4-daily-mindfulness.html"><img class="blog-image" src="images/mountain_range.jpg" alt="Mountain range"></a>
         </div>
 
@@ -125,73 +164,11 @@
           <p class="dateline"><em>8th April 2016</em></p>
           <p class="blog-heading-text">
             Having read Chapter 3 of Seach Inside Yourself, my partner and I had a four minute conversation in which we practised mindful listening, dipping, and looping...(click to read more)
-          </p></a>        
-        </div><!-- end of seven columns -->
-
-        <div class="one column">
-        </div><!-- end of one column -->
-      </div><!-- end of row -->
-
-      <div class="row space-between-blog-posts"><!-- spacer row -->
-      </div><!-- end of spacer row -->
-
-
-      <div class="row">
-        <div class="three columns offset-by-one">
-          <a href="blog/c3-meditation-process.html"><img class="blog-image" src="images/kitesurf.jpg" alt="kites"></a>
-        </div>
-
-        <div class="seven columns">
-          <a href="blog/c3-meditation-process.html"><h5 class="blog-heading-text">Meditation and Process</h5>
-          <p class="dateline"><em>4th April 2016</em></p>
-          <p class="blog-heading-text">
-            I'm not going to lie, sticking to the "process over product" approach this week was tough for me...(click to read more)
-          </p></a>        
-        </div><!-- end of seven columns -->
-
-        <div class="one column">
-        </div><!-- end of one column -->
-      </div><!-- end of row -->
-
-      <div class="row space-between-blog-posts"><!-- spacer row -->
-      </div><!-- end of spacer row -->
-
-      <div class="row">
-        <div class="three columns offset-by-one">
-          <a href="blog/t3-design-to-web-blog.html"><img class="blog-image" src="images/canoes.jpg" alt="canoes"></a>
-
-        </div>
-        <div class="seven columns">
-          <a href="blog/t3-design-to-web-blog.html"><h5 class="blog-heading-text">Design to Web</h5>
-          <p class="dateline">
-            <em>2nd April 2016</em>
-          </p>
-          <p class="blog-heading-text">
-            This week we looked at the concepts of responsiveness, mobile-first development, and frameworks. Ever get the feeling you're drinking from a firehose?...(click to read more)
-          </p></a>        
-        </div><!-- end of seven columns -->
-        <div class="one column">
-        </div><!-- end of one column -->
-      </div><!-- end of row -->
-
-      <div class="row space-between-blog-posts"><!-- spacer row -->
-      </div><!-- end of spacer row -->
-
-      <div class="row">
-        <div class="three columns offset-by-one">
-          <a href="blog/t2-html-css-dom-p2.html"><img class="blog-image" src="images/turn.jpg" alt="turn"></a>
-        </div>
-        <div class="seven columns">
-          <a href="blog/t2-html-css-dom-p2.html"><h5 class="blog-heading-text">HTML. CSS, and the DOM (part 2)</h5>
-          <p class="dateline">
-            <em>23rd March 2016</em>
-          </p>
-          <p class="blog-heading-text">
-            This is the second part of my blog post devling into HTML, CSS, and the DOM. The focus this week was on grid based design and semantic structure...(click to read more)
           </p></a>
-        </div>
+        </div><!-- end of seven columns -->
+<!--
         <div class="one column">
-        </div>
+        </div><end of one column -->
       </div><!-- end of row -->
 
       <div class="row space-between-blog-posts"><!-- spacer row -->
@@ -234,7 +211,7 @@
     </div><!-- end of container -->
   </section><!-- end of contact me section -->
 
- 
+
 
 </body>
 </html>
