--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   </section><!-- end of landing page -->
 
-  <section class="grey-background"><!-- about me section heading -->
+  <section><!-- about me section heading -->
     <div class="container">
       <div class="row space-between-sections">
       </div><!-- end of spacer row between sections -->
@@ -66,7 +66,7 @@
       </div><!-- end of row -->
       <div class="row">
         <div class="four columns circular offset-by-four">
-          <img class="profile-image" src="images/Gaza.JPG" alt="">
+          <img class="profile-image" src="images/Gaza.jpg" alt="">
         </div><!-- end of four colums -->
       </div><!-- end of row -->
       <div class="row">
@@ -84,7 +84,7 @@
     </div><!-- end of container -->
   </section><!-- end of about me section -->
 
-  <section><!-- blog posts section -->
+  <section class="grey-background"><!-- blog posts section -->
     <div class="container">
       <div class="row space-between-sections">
       </div><!-- end of spacer row between sections -->
