changes I'm not sure I want to keep

--- a/index.html
+++ b/index.html
@@ -41,15 +41,11 @@
       </nav>
 
     <div class="header-box">
-      <p>
-        <em>Passionate</em>
-      </p>
+      <p id="passion">Passionate</p>
       <h5>
         <strong>Full Stack Developer</strong>
       </h5>
-      <p>
-        <em>(in training)</em>
-      </p>
+      <p id="training">(in training)</p>
     </div>
 
   </section><!-- end of landing page -->
